src/objects/filegen__Batch_Process_Log__c.object
<CustomObject>
    <fields>
        <fullName>filegen__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>filegen__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>filegen__Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>filegen__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Result</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Batch Process Log</label>
    <nameField>
        <displayFormat>BPL-{000000000}</displayFormat>
        <label>Batch Process Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Process Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>